--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <button id="restart" onclick="restart()">Jogar novamente</button>
     </div>
 
+    <script src="./assets/scripts/game.js"></script>
     <script src="./assets/scripts/script.js"></script>
 </body>
 </html>
